# GPUWeightedDelaunay3D

./: CMakeLists.txt
include/wd3d/: common.hpp  power_predicates.hpp  regular_cpu_bw.hpp
sample_data/: tetra5.xyzw
src/apps/: EdgesWeigthedDelaunay3D.cpp  WeigthedDelaunay3D.cpp
src/cpu/: regular_cpu.cpp  regular_cpu_bw.cpp
src/gpu/: power_predicates.cuh  triangulation_kernels.cu
src/io/: xyzw_io.cpp
tests/: test_tiny.cpp
